[#16075] address checklist.md items and fix issues. cleaned up comments and null checks. used modern Java for factory instead of constructor. updated string in JabRef_en.properties. updated changelog and created entry-preivew.md with new features.